--- a/gui/templates/about.html
+++ b/gui/templates/about.html
@@ -1,36 +1,51 @@
-{% extends 'base_home.html' %}
+{% extends 'base_about.html' %}
 {% load static %}
-{% block title %}QUIÉNES SOMOS - Observatorio Aysen{% endblock title%}
+
+{% block title %}
+Quiénes Somos | Observatorio Laboral Aysen
+{% endblock title %}
 
 {% block head %}
 <script src="{% static 'gui/js/about.js' %}"></script>
 {% endblock head %}
 
-{% block content_home %}
-<br>
-<div class="row">
-	<div class="col s12"><a href="{% url 'gui:home' %}">Inicio /</a><a href="#"> Quiénes Somos >></a></div>
-	<div class="col s3"></div>	
-</div>
+{% block content_about %}
+<div id="main">
 
-<div class="row">
-	<div class="col s12 white">
-		<div class="row">
-			<div class="col s12">
-				<img class="responsive-img banner" src="{% static 'gui/img/cropped.jpg' %}">
-			</div>
-		</div>
-		<div class="row">
-			<div class="col s12">
-				<h4>QUIÉNES SOMOS</h4>
-			</div>
-		</div>
-		<div class="divider"></div>
-		<div class="row">
-			<div class="col s12">
-				<p>El Observatorio Laboral para la Región de Antofagasta se encuentra integrado en la red de Observatorios Laborales desarrollada por el Servicio Nacional de Capacitación y Empleo, contando con el financiamiento de la Sociedad de Fomento Fabril. La misión del observatorio es producir conocimiento e información sobre el funcionamiento y caracterización del mercado de trabajo y su dinámica para la Región de Antofagasta, avanzando hacia la anticipación de las brechas futuras de capital humano. Esto con el objetivo de mejorar la empleabilidad de los trabajadores y productividad de la región, por medio de proveer información que apoye la pertinencia de la formación, y el vínculo entre vacantes de empleo y buscadores de empleo. Los principales usuarios de la información provista por el Observatorio son instituciones de Gobierno, las Oficinas Municipales de Información Laboral, instituciones educacionales/formativas, trabajadores y empresarios a nivel regional como nacional. El Observatorio Laboral para la Región de Antofagasta es parte de una red de observatorios regionales (uno para cada región del país) coordinados por el Observatorio Nacional (http://observatorionacional.cl/). Este Observatorio Nacional está conformado por una oficina central y la red de 15 observatorios. El Director de SENCE y los respectivos Directores Regionales del Servicio son los responsables y representantes del proyecto a nivel central y regional. Cada observatorio contará con un consejo asesor que integrará representantes del Estado, del mundo empresarial, empresarios, trabajadores y académicos.  </p>
-			</div>
-		</div>
-	</div>
-</div>
-{% endblock content_home %}
+        <div id="breadcrumbs">
+          <ul>
+            <li><a href="{% url 'gui:home' %}">Inicio</a></li>
+            <li class="sep">/</li>
+            <li>Quiénes Somos »</li>
+          </ul>
+          <div class="clearfix"></div>
+        </div>
+
+        <div class="post">
+
+                                              <div class="fontsize">
+              <ul>
+                <li class="small"><a data-size="10">a</a></li>
+                  <li class="medium current"><a data-size="15">a</a></li>
+                  <li class="large"><a data-size="20">a</a></li>
+              </ul>
+            </div>
+                                    <div class="clearfix"></div>
+
+            <div class="texto">
+
+              <h3 class="title">Quiénes Somos</h3>
+              <div class="contenido">
+                <p>El <strong>Observatorio Nacional</strong> forma parte del <strong>Servicio Nacional de Capacitación y Empleo</strong>, y su <strong>misión</strong> es producir conocimiento sobre las brechas existentes entre oferta y demanda de ocupaciones en el mercado del trabajo, y avanzar hacia la <strong>anticipación de las brechas futuras</strong>. Esto con el objetivo de <strong>mejorar la empleabilidad de los trabajadores y productividad del país</strong>, por medio de proveer información que apoye la pertinencia de la formación, y el vínculo entre vacantes de empleo y buscadores de empleo.</p>
+<p>El <strong>Observatorio Nacional está conformado por una oficina central y una red de 15 observatorios regionales.</strong></p>
+<p>Los usuarios de la información provista por el Observatorio Nacional son instituciones de Gobierno, las Oficinas Municipales de Información Laboral, instituciones educacionales/formativas, trabajadores y empresarios.</p>
+<p>Actualmente los Observatorios de Antofagasta, Coquimbo, Valparaíso, Maule, Ñuble, Bío Bío, La Araucanía y Aysén han iniciado sus funciones. Los Observatorios de Tarapacá, Los Lagos, Los Ríos, Magallanes y Región Metropolitana se encuentran en fase de diseño. El resto de las regiones se incorporarán a finales de 2017.</p>
+<p>El Director de SENCE y los respectivos Directores Regionales del Servicio son los responsables y representantes del proyecto a nivel central y regional. Cada observatorio cuenta con un consejo asesor que integra representes del Estado, sector público, empresarios, trabajadores y académicos.</p>
+              </div>
+            </div>
+                    
+          <div class="clearfix"></div>
+        </div>
+
+      </div>
+{% endblock content_about %}
