--- a/gui/templates/advice.html
+++ b/gui/templates/advice.html
@@ -1,57 +1,145 @@
-{% extends 'base_home.html' %}
+{% extends 'base_about.html' %}
 {% load static %}
-{% block title %}Consejo Asesor - Observatorio Aysen{% endblock title%}
+
+{% block title %}
+Consejo Asesor | Observatorio Laboral Aysen
+{% endblock title %}
 
 {% block head %}
 <script src="{% static 'gui/js/advice.js' %}"></script>
 {% endblock head %}
 
-{% block content_home %}
-<br>
-<div class="row">
-	<div class="col s12"><a href="{% url 'gui:home' %}">Inicio /</a><a href="#"> Consejo Asesor >></a></div>
-	<div class="col s3"></div>	
-</div>
-<div class="row">
-	<div class="col s12 white">
-		<div class="row">
-			<div class="col s12">
-				<h4>Consejo Asesor</h4>
+{% block content_about %}
+<div id="main">
+
+	<div id="breadcrumbs">
+		<ul>
+			<li><a href="{% url 'gui:home' %}">Inicio</a></li>
+			<li class="sep">/</li>
+			<li>Consejo Asesor »</li>
+		</ul>
+		<div class="clearfix"></div>
+	</div>
+
+	<div class="post">
+
+		<div class="fontsize">
+			<ul>
+				<li class="small"><a data-size="10">a</a></li>
+				<li class="medium current"><a data-size="15">a</a></li>
+				<li class="large"><a data-size="20">a</a></li>
+			</ul>
+		</div>
+		<div class="clearfix"></div>
+
+		<div class="texto">
+
+			<h3 class="title">Consejo Asesor</h3>
+			<div class="contenido">
+				<table style="height: 2251px;" width="604">
+					<tbody>
+						<tr>
+							<td>
+								<h5>Andrea Zondek Darmstadter</h5>
+								<p>Terapeuta Ocupacional de la Universidad de Chile y Máster en Integración de Personas con Discapacidad de la Universidad de Salamanca, España. Fundadora Fundación Tacal en 1985; Gerente de Proyectos Sociales de Fundación Andes entre los años 1998 y 2000;  Directora Nacional del Fondo Nacional de la Discapacidad durante el gobierno del Presidente Lagos entre los años 2000 y 2006.</p>
+								<p>Ha participado en diversas publicaciones e investigaciones, entre ellos el “Primer estudio Nacional de la Discapacidad, ENDISC – CIF, 2004” y “Discapacidad en Chile, pasos hacia un modelo integral del funcionamiento humano, 2006”.</p>
+								<p>Autora de el Manual para una Inclusión Laboral Efectiva de Personas con Discapacidad lanzado recientemente en enero 2016.</p>
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<h5>Alejandra Mustakis</h5>
+								<p>Diseñadora industrial y una de las grandes impulsoras del emprendimiento en Chile. Co-fundadora de Medular, Kauel, Stgo MakerSpace e iF.</p>
+								<p>Directora de ASECH, Incubadora de negocios de la Universidad Federico Santa María 3IE, Fundación ViveChile VTR, Consejera de Comunidad Mujer y Circulo Innovación Icare.</p>
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<h5>Richard von Appen</h5>
+								<p>Ingeniero Comercial de la Universidad Católica de Chile y  Master de la Universidad de Stanford.  Es Presidente de Ultramar, dedicado al transporte marítimo, logístico y portuario.  Adicionalmente, es consejero de Sofofa, de la Fundación CEAUC, de la Fundación de ex alumnos de Stanford Chile y tesorero de Icare.</p>
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<h5>Marcela Perticará</h5>
+								<p>Ph.D. en Economía de Texas A&amp;M University y Licenciada en Economía de la Universidad Nacional de Córdoba (1995). Desde el año 2002 trabaja como profesora en la Facultad de Economía y Negocios de la Universidad Alberto Hurtado. Ha trabajado como consultora en proyectos de diversos organismos para el Gobierno de Chile y otros organismos internacionales (CEPAL, Banco Interamericano de Desarrollo, PNUD, entre otros). Fue miembro de la Comisión Revisora del Sistema de Capacitación e Intermediación Laboral en el período 2011-2012. Sus áreas de investigación son economía laboral, educación y desarrollo económico.</p>
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<h5>Jaime Ruiz-Tagle</h5>
+								<p>Profesor del Departamento de Economía y Director del Centro de Microdatos de la Universidad de Chile. Su investigación se ha centrado en la dinámica del mercado laboral chileno, las decisiones financieras de los hogares y la evaluación de programas sociales. Anteriormente se desempeñó como consultor asociado del PNUD y como economista senior del Banco Central. También ha llevado a cabo diversas consultorías para organismos internacionales como el Banco Interamericano de Desarrollo, el Programa de Naciones Unidas para el Desarrollo, y para instituciones públicas y privadas en Chile</p>
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<h5>Marisol Alarcón</h5>
+								<p>Ingeniera Comercial y Magister en Administración Pública de Columbia University, con experiencia en desarrollo social en el sector público y sociedad civil.  Es la co-fundadora de Laboratoria Chile, quienes transforman a mujeres jóvenes sin educación superior en desarrolladoras web, insertándolas en la industria digital, mejorando así la desocupación femenina del país y reduciendo la brecha de género de la industria digital.</p>
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<h5>Juan Cristóbal Beytía</h5>
+								<p>Capellán de TECHO-Chile, el cual nace cuando un grupo de jóvenes comienza a trabajar por el sueño de superar la pobreza en campamentos. Actualmente TECHO está presente en 191 Mesas de Trabajo a lo largo del país en comunidades con las que trabajamos y durante el 2015 movilizó a 5841 voluntarios.</p>
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<h5>Juan Pablo del Río</h5>
+								<p>Es Arquitecto de la Pontificia Universidad Católica de Chile. Actualmente es Presidente del Directorio de DERCO, Presidente del Directorio de SODIMAC y Director de SRC S.A.</p>
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<h5>Mauricio Jelvez</h5>
+								<p>Es Ingeniero Comercial y Doctor (c) en Ciencias de Management, ESADE. Socio Fundador de PYMER S.A.G.R. y PYMER FACTOR y Ex Subsecretario del Trabajo (2008-2010) con amplia experiencia en mercado laboral.</p>
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<h5>Bárbara Figueroa</h5>
+								<p>Es licenciada de psicología, profesora de filosofía, y sindicalista chilena. Ha sido dirigente nacional del Colegio de Profesores de Chile y actualmente es presidenta de la Central Unitaria de Trabajadores de Chile.</p>
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<h5>Jorge Petit – Breuilh</h5>
+								<p>Es Ingeniero civil Industrial y Magister en Desarrollo Humano Local y Regional. Actualmente es Director del Instituto de Desarrollo Local y Regional  &#8211; IDER de la Universidad de La Frontera, miembro del directorio del Centro de Negocios de Temuco – SERCOTEC/UFRO y miembro del directorio del Convenio de Desempeño Regional “UNETE: Universidad es Territorio” MINEDUC/UFRO.</p>
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<h5>Alberto Salas</h5>
+								<p>Es Ingeniero, académico, empresario, dirigente gremial y consultor chileno, presidente de la Sociedad Nacional de Minería (Sonami) desde fines del año 2009 y de la Confederación de la Producción y del Comercio (CPC) desde marzo de 2015.</p>
+								<hr />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<h5>Marcela Arellano</h5>
+								<p>Socióloga, actualmente se desempeña como asesora del equipo de Reforma Educacional del Ministerio de Educación en el cargo de Secretaria Ejecutiva de Formación Técnico-Profesional, le corresponde coordinar la Política Nacional de Formación Técnico-Profesional e implementar, entre otros, los nuevos Centros de Formación Técnica Estatales (Ley N° 20.910). Por más de 10 años trabajó en Fundación Chile liderando innovaciones en los ámbitos de empleabilidad, emprendimiento y formación técnica, destacándose los proyectos “AMPLIA”, “Te Orienta”, “Porquese” y “Preparado”, todos probados con éxito en el sistema educacional secundario y terciario y en el mundo de la capacitación, en alianzas públicas y privadas. Ha sido consultora para Banco Interamericano de Desarrollo (BID), International Youth Foundation, OIT-Cinterfor, entre otros.</p>
+								<hr />
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				<p>&nbsp;</p>
 			</div>
 		</div>
-		<div class="divider"></div>
-		<div class="row">
-			<div class="col s12">
-				<p>El consejo asesor que rige la actividad del Observatorio Laboral para la Región de Antofagasta está presidido por el/la Director/a Regional de SENCE que contará con la participación de el/la Seremi de Economía regional, el/la Seremi del Trabajo, un representante de CORFO, un representante del INE, un representante regional del Ministerio de Desarrollo Social, dos representantes regionales del ámbito empresarial, dos representantes regionales del ámbito laboral (trabajadores) y dos representantes del sector educacional. </p>
-			</div>
-		</div>
+
+		<div class="clearfix"></div>
 	</div>
+
 </div>
-<div class="row white">
-	<br>
-	<div class="col s6 m3 l3">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Nombre Apellido</center>
-		<center>Cargo</center>
-		<br>
-	</div>
-	<div class="col s6 m3 l3">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Nombre Apellido</center>
-		<center>Cargo</center>
-		<br>
-	</div>
-	<div class="col s6 m3 l3">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Nombre Apellido</center>
-		<center>Cargo</center>
-		<br>
-	</div>
-	<div class="col s6 m3 l3">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Nombre Apellido</center>
-		<center>Cargo</center>
-		<br>
-	</div>
-</div>
-{% endblock content_home %}
+{% endblock content_about %}
