--- a/gui/templates/team.html
+++ b/gui/templates/team.html
@@ -1,58 +1,109 @@
-{% extends 'base_home.html' %}
+{% extends 'base_about.html' %}
 {% load static %}
-{% block title %}Equipo - Observatorio Aysen{% endblock title%}
 
-{% block head %}
-<script src="{% static 'gui/js/team.js' %}"></script>
-{% endblock head %}
+{% block title %}
+Equipo | Observatorio Laboral Aysen
+{% endblock title %}
 
-{% block content_home %}
-<br>
-<div class="row">
-	<div class="col s12"><a href="{% url 'gui:home' %}">Inicio /</a><a href="#"> Equipo >></a></div>
-	<div class="col s3"></div>	
-</div>
-<div class="row">
-	<div class="col s12 white">
-		<div class="row">
-			<div class="col s12">
-				<h4>Equipo</h4>
-			</div>
+
+{% block content_about %}
+<div id="main">
+
+	<div id="breadcrumbs">
+		<ul>
+			<li><a href="{% url 'gui:home' %}">Inicio</a></li>
+			<li class="sep">/</li>
+			<li>Equipo »</li>
+		</ul>
+		<div class="clearfix"></div>
+	</div>
+
+	<div class="post">
+
+		<div class="fontsize">
+			<ul>
+				<li class="small"><a data-size="10">a</a></li>
+				<li class="medium current"><a data-size="15">a</a></li>
+				<li class="large"><a data-size="20">a</a></li>
+			</ul>
 		</div>
-		<div class="divider"></div>
-		<div class="row">
-			<div class="col s12">
-				<p>NOMBRES DE LOS INTEGRANTES DEL EQUIPO AYSEN </p>
-				<P>Asimismo, se cuenta con el apoyo para el análisis del alumnado de postgrado del Departamento de Economía de la UCN y con el apoyo en la administración del proyecto de Berta Romero, Lorena Saldes y Mélida Barrios. </P>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="row white">
-	<br>
-	<div class="col s6 m3 l3">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Nombre Apellido</center>
-		<center>Cargo</center>
-		<br>
-	</div>
-	<div class="col s6 m3 l3">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Nombre Apellido</center>
-		<center>Cargo</center>
-		<br>
-	</div>
-	<div class="col s6 m3 l3">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Nombre Apellido</center>
-		<center>Cargo</center>
-		<br>
-	</div>
-	<div class="col s6 m3 l3">
-		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
-		<center>Nombre Apellido</center>
-		<center>Cargo</center>
-		<br>
-	</div>
-</div>
-{% endblock content_home %}
+		<div class="clearfix"></div>
+
+		<div class="texto">
+
+			<h3 class="title">Equipo</h3>
+			<div class="contenido">
+				<table class="table">
+					<tbody>
+						<tr>
+							<td width="169"><strong>Macarena Alvarado</strong></td>
+							<td width="450">Coordinadora Nacional</td>
+						</tr>
+						<tr>
+							<td colspan="2">
+								Magister en Economía de la Universidad de Chile y Master en Políticas Públicas de Paris School of Economics. Anteriormente, se desempeñó como Coordinadora de la Unidad de Evaluación de Programas del Ministerio de Educación y como Asesora Económica de la Subsecretaria del Trabajo.</td>
+							</tr>
+							<tr>
+								<td width="169"><strong>Felipe McRostie</strong></td>
+								<td width="450">Encargado área análisis y producción de información</td>
+							</tr>
+							<tr>
+								<td colspan="2">
+									Licenciado en Filosofía y Magíster en Economía de la Universidad de Chile. Anteriormente, se desempeñó como analista de trabajo y previsión social en la División de Políticas Sociales del Ministerio de Desarrollo Social y ha desarrollado estudios en pobreza, desigualdad y mercado laboral.</td>
+								</tr>
+								<tr>
+									<td width="169"><strong>Victoria Paz</strong></td>
+									<td width="450">Encargada área de incidencia y relaciones institucionales</td>
+								</tr>
+								<tr>
+									<td colspan="2">
+										Ingeniero Comercial, Magister en Economía y Regulación de los Servicios Públicos, Magister en Políticas Públicas. Anteriormente se desempeñó como Directora del Centro de Investigación Social de Un Techo para Chile, asesora económica en el Ministerio de Economía y como Jefa de la Unidad de Intermediación Laboral del Ministerio del Trabajo.</td>
+									</tr>
+									<tr>
+										<td width="169"><strong>Josefina Ramos</strong></td>
+										<td width="450">Analista</td>
+									</tr>
+									<tr>
+										<td colspan="2">
+											Economista de la Universidad de Chile, anteriormente se desempeñó en Fundación Sol analizando diversos ámbitos del mercado laboral. Además, ha desarrollado estudios en el área de educación.</td>
+										</tr>
+										<tr>
+											<td width="169"><strong>Felipe Fábrega</strong></td>
+											<td width="450">Analista</td>
+										</tr>
+										<tr>
+											<td colspan="2">
+												Licenciado en Sociología y Magister en Economía Aplicada (c) de la Universidad de Chile.<br />
+												Anteriormente, desempeñó laborales vinculadas a la investigación social y el levantamiento de información en la División de Reinserción Social del Ministerio de Justicia y Derechos Humanos, la Sociedad Chilena de Nefrología y el Instituto Nacional de Estadísticas.<br />
+												Adicionalmente ha sido asistente de investigación en  diversos estudios en el área de educación.
+											</td>
+										</tr>
+										<tr>
+											<td width="169"><strong>Andrea Sandoval</strong></td>
+											<td width="450">Analista</td>
+										</tr>
+										<tr>
+											<td colspan="2">
+												Economista e Ingeniero en Información y Control de Gestión de la Universidad de Chile (Magíster (c) en Economía).<br />
+												Anteriormente se ha desempeñado como practicante en la Fundación Sol. Actualmente está desarrollando una investigación sobre los desajustes por calificación a nivel de ocupación en Chile (tesis) y es profesor part-time de matemáticas en la Universidad de Chile.
+											</td>
+										</tr>
+										<tr>
+											<td width="169"><strong>Ivan Gutierrez</strong></td>
+											<td width="450">Analista</td>
+										</tr>
+										<tr>
+											<td colspan="2">
+												Economista de la Universidad de Chile (Magíster (c) en Economía). Ha sido asistente de investigación en estudios en el área de la estadística, específicamente sobre nuevas técnicas de matching para la evaluación de impacto, nuevas técnicas de imputación y estimación de área pequeña usando la nueva encuesta nacional de empleo (ENE).</td>
+											</tr>
+										</tbody>
+									</table>
+									<p>&nbsp;</p>
+								</div>
+							</div>
+
+							<div class="clearfix"></div>
+						</div>
+
+					</div>
+					{% endblock content_about %}
